修改消息队列及线程池分发任务部分逻辑